# nanoGBT

./: .gitignore  LICENSE  README.md  eval.py  pyproject.toml  sample.py
char/: README.md  tokenize.py  train.py
char/configs/: finetune.yaml  italian-pd_pretrain.yaml  pretrain.yaml  sonnets.yaml  sonnets_finetune.yaml  sonnets_only.yaml
char/configs/dataset/: italian-pd.yaml  sonnets.yaml  sonnets_finetune.yaml  sonnets_rhymes.yaml  sonnets_rhymes_last_word.yaml  sonnets_rhymes_suffix.yaml
char/pretrain/: prepare.py
common/: config.py  eval.py  model.py  rhyme_utils.py  tokenizer.py  train_utils.py  trainer.py
data/: README.md
data/scripts/: postprocess.py  scrape.py
finetune/: finetune.py  prepare.py
subw/: tokenize.py  train.py
subw/configs/: sonnets.yaml  sonnets_rhymes.yaml
subw/configs/dataset/: sonnets.yaml  sonnets_rhymes.yaml  sonnets_rhymes_last_word.yaml  sonnets_rhymes_suffix.yaml
subw/configs/tokenizer/: bpe.yaml  unigram.yaml  unigram_regularized.yaml
syllable/: syllabify.py  tokenize.py  train.py
syllable/configs/: sonnets.yaml
syllable/configs/dataset/: sonnets_rhymes_suffix.yaml
syllable/pretrain/: prepare.py
tests/: test_eval.py  test_model.py  test_postprocess.py  test_rhyme_utils.py  test_tokenizer.py  test_train_utils.py
